objects/Error__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Errors</relationshipLabel>
        <relationshipName>Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPM_ID__c</fullName>
        <label>CPM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Name__c</fullName>
        <label>Configuration Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEDERATIONIDENTIFIER__c</fullName>
        <label>Federation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Activity_Id__c</fullName>
        <label>Fault Activity Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fault_Activity_Name__c</fullName>
        <label>Fault Activity Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Message__c</fullName>
        <label>Fault Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fault_Name__c</fullName>
        <label>Fault Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Time__c</fullName>
        <label>Fault Time</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier_1__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>CPM ID (CPM_IN), Employee Number (WORKDAY_IN), Opportunity ID (DMS_IN)</inlineHelpText>
        <label>Identifier 1</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Identifier_2__c</fullName>
        <label>Identifier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration__c</fullName>
        <label>Integration</label>
        <picklist>
            <picklistValues>
                <fullName>CPMCRMProd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRMContractExpressAccnt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRMDMSAccnt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRMKeywillAccnt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HRCRMEmp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>migrationUser</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <description>A unique id which reference a particular execution in Cast Iron</description>
        <externalId>true</externalId>
        <label>Job ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Job_Start_Time__c</fullName>
        <description>Cast Iron execution timestamp</description>
        <label>Job Start Time</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Occurrence__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Last Occurrence</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Orchestration_Name__c</fullName>
        <description>Cast Iron orchestration name</description>
        <label>Orchestration Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Cast Iron Project Name</description>
        <label>Project Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Router_Host_Name__c</fullName>
        <label>Router Host Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <label>Row Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Investigating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working as Intended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Errors__c</fullName>
        <label>Total Errors</label>
        <summaryForeignKey>Error_Line_Item__c.Error__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Error</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Orchestration_Name__c</columns>
        <columns>Integration__c</columns>
        <columns>Error__c</columns>
        <columns>Identifier_2__c</columns>
        <columns>Job_Start_Time__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>Last_Occurrence__c</columns>
        <columns>Integration__c</columns>
        <columns>Identifier_1__c</columns>
        <columns>Identifier_2__c</columns>
        <columns>Status__c</columns>
        <columns>Error__c</columns>
        <columns>Error_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Last_Occurrence__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Integration__c</field>
            <operation>equals</operation>
            <value>HRCRM_IN</value>
        </filters>
        <label>Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Yesterday</fullName>
        <columns>NAME</columns>
        <columns>Integration__c</columns>
        <columns>Identifier_1__c</columns>
        <columns>Identifier_2__c</columns>
        <columns>Status__c</columns>
        <columns>Error__c</columns>
        <columns>Last_Occurrence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>7/24/2013 12:00 AM</value>
        </filters>
        <label>Yesterday</label>
    </listViews>
    <nameField>
        <displayFormat>ERR-{0000}</displayFormat>
        <label>Error #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>